<resources>
    <string name="app_name">LotrWiki</string>
    <string name="personajes">Personajes</string>
    <string name="frodo_description_example">Frodo Baggins es un hobbit de la Comarca, conocido por su papel
        crucial en la Guerra del Anillo. Sobrino de Bilbo Baggins, hereda el Anillo Único y es encargado de destruirlo en el Monte del Destino. A lo largo de su viaje, muestra valentía y resistencia, enfrentando grandes peligros y tentaciones. Con la ayuda de la Comunidad del Anillo, especialmente su fiel amigo Samwise Gamgee, Frodo supera innumerables obstáculos, simbolizando la lucha del bien contra el mal. Su sacrificio y determinación son fundamentales para la caída de Sauron y la restauración de la paz en la Tierra Media.</string>
    <string name="contenido">Contenido</string>
    <string name="locaciones">Ubicaciones</string>
    <string name="armas">Armas</string>
    <string name="media">Media</string>
    <string name="peliculas">Adaptaciones</string>
    <string name="libros">Libros</string>
    <string name="juegos">Juegos</string>
    <string name="tolkien">J. R. R. Tolkien</string>
    <string name="mapas">Mapas</string>
    <string name="otros">Otros</string>
    <string name="explorar">Explorar</string>
    <string name="arrow_forward">Arrow forward</string>
    <string name="razas">Razas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back button</string>
    <string name="mordor">mordor</string>
    <string name="books_intro">La obra literaria de J.R.R. Tolkien ha dejado una huella indeleble en la literatura fantástica y en los corazones de millones de lectores alrededor del mundo. Sus libros nos transportan a la Tierra Media, un mundo lleno de magia, heroísmo y aventuras épicas. Desde los verdes campos de la Comarca hasta las sombrías profundidades de Mordor, cada rincón de este vasto universo está meticulosamente detallado con una riqueza que sólo un maestro narrador como Tolkien podría crear.\nEn esta sección, encontrarás una recopilación de las obras más emblemáticas de Tolkien. Desde la trilogía de \"El Señor de los Anillos\" hasta \"El Hobbit\", pasando por \"El Silmarillion\" y otros textos menos conocidos pero igualmente fascinantes, exploraremos los mitos y las historias que han dado forma a este legendario mundo. Estos libros no solo narran aventuras épicas, sino que también exploran temas profundos como la amistad, el sacrificio y la lucha entre el bien y el mal.</string>
    <string name="tolkien_resumen">John Ronald Reuel Tolkien, más conocido como J.R.R. Tolkien, fue un destacado escritor, poeta, filólogo, lingüista y profesor universitario británico nacido en Sudáfrica en 1892 y fallecido en Inglaterra en 1973. Es famoso por ser el autor de obras icónicas como "El Hobbit" y "El Señor de los Anillos". Durante su carrera académica, ocupó importantes cátedras en la Universidad de Oxford, donde enseñó anglosajón y literatura inglesa. Tolkien era un devoto católico romano y mantuvo una estrecha amistad con el también escritor C.S. Lewis, siendo ambos miembros de un grupo literario conocido como los Inklings. Además de sus obras más conocidas, Tolkien escribió extensamente sobre un mundo ficticio llamado Arda y su continente principal, la Tierra Media, creando un complejo legendarium que incluye libros como "El Silmarillion" y "Los Hijos de Húrin". Su impacto en la literatura fantástica moderna es innegable, siendo considerado el "padre del género" y habiendo inspirado a numerosos escritores y obras posteriores. A lo largo de los años, la obra de Tolkien ha generado un vasto cuerpo de crítica y análisis conocido como "erudición tolkieniana", destacando su profundo impacto cultural y literario en todo el mundo occidental.</string>
    <string name="trivia">Trivia</string>
    <string name="ready_trivia">Preparado para poner a prueba tus conocimientos sobre el legendarium de Tolkien?</string>
    <string name="question_number">Pregunta %1$d de %2$d</string>
    <string name="next_question">siguiente</string>
    <string name="finish">finalizar</string>
    <string name="score">Tu puntuación es: %1$d de %2$d</string>
    <string name="rank1">Eres un simple y sucio orco sin conocimientos</string>
    <string name="rank2">Te arrastras como Gollum en busca de conocimientos</string>
    <string name="rank3">Has mejorado, al parecer has estudiado</string>
    <string name="rank4">Bien! Tienes el nivel de un rey</string>
    <string name="rank5">Nivel divino, podrias ser un Istari junto a Gandalf</string>
    <string name="rank0">Dedicate a otra cosa</string>
    <string name="ver_todos">ver todos</string>
    <string name="gender">gender</string>

    <string-array name="factions">
        <item>bien</item>
        <item>mal</item>
    </string-array>

    <string-array name="races">
        <item>Hobbits</item>
        <item>Hombres</item>
        <item>Elfos</item>
        <item>Enanos</item>
        <item>Orcos</item>
        <item>Dragones</item>
        <item>Ainur</item>
        <item>Maiar</item>
        <item>Aguilas</item>
    </string-array>


</resources>