<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Tierra Media">
        <menu>
            <item
                android:id="@+id/characters"
                android:icon="@drawable/ic_characters"
                android:title="@string/personajes" />
            <item
                android:id="@+id/locations"
                android:icon="@drawable/ic_locations"
                android:title="@string/locaciones" />
            <item
                android:id="@+id/races"
                android:icon="@drawable/ic_race"
                android:title="@string/razas" />
            <item
                android:id="@+id/events"
                android:icon="@drawable/ic_maps"
                android:title="Eventos/Batallas" />
            <item
                android:id="@+id/maps"
                android:icon="@drawable/ic_maps"
                android:title="@string/mapas" />
            <item
                android:id="@+id/languages"
                android:icon="@drawable/ic_male"
                android:title="Lenguas/Escrituras" />
            <item
                android:id="@+id/others"
                android:icon="@drawable/ic_maps"
                android:title="Otros" />
        </menu>
    </item>
    <item android:title="Legado Tolkien">
        <menu>
            <item
                android:id="@+id/tolkien"
                android:icon="@drawable/ic_ring"
                android:title="@string/tolkien" />
            <item
                android:id="@+id/adaptations"
                android:icon="@drawable/ic_movies"
                android:title="@string/peliculas" />
            <item
                android:id="@+id/books"
                android:icon="@drawable/ic_books"
                android:title="@string/libros" />
            <item
                android:id="@+id/games"
                android:icon="@drawable/ic_games"
                android:title="@string/juegos" />
            <item
                android:id="@+id/music"
                android:icon="@drawable/ic_dice"
                android:title="Musica" />
            <item
                android:id="@+id/people"
                android:icon="@drawable/ic_dice"
                android:title="Autores" />
        </menu>
    </item>
    <item android:title="Entretenimiento">
        <menu>
            <item
                android:id="@+id/trivia"
                android:icon="@drawable/ic_dice"
                android:title="@string/trivia" />
            <item
                android:id="@+id/memes"
                android:icon="@drawable/ic_dice"
                android:title="Memes" />
        </menu>
    </item>
</menu>